--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,23 +1,252 @@
 * {
   box-sizing: border-box;
+  line-height: 2rem;
+  color: white;
 }
 
-body {
+html {
+  background: linear-gradient(105.43deg, rgba(103, 93, 233, 0) 25%, rgba(103, 93, 233, 0.32) 73%, rgba(103, 93, 233, 0) 102%), black;
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  height: 100vh;
+  border-bottom: white;
+}
+
+.header {
+  flex-basis: 100%;
+  text-align: center;
+}
+
+nav {
+  padding-right: 35px;
+  position: fixed;
+  bottom: 100px;
+  border-radius: 999px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  background-color: rgb(255, 255, 255, 0.2)
+}
+
+.container-nav {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style: none;
+  gap: 80px;
+}
+
+a {
+  text-decoration: none;
+}
+
+hr {
+  width: 60%;
+  z-index: 1;
+}
+
+.page-wrapper {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.about-me, .contact-me, .resume {
+  width: 55%;
+  margin: 80px;
+  padding: 80px;
+  border: 2px solid white;
+  box-shadow: 8px 8px 8px 8px white;
+
+}
+.about-me img {
+  position: relative;
+  left: 30%;
+  border-radius: 50%;
+  width: 40%;
+  height: auto;
+  min-width: 100px;
+  
+}
+
+.about-me p {
+  margin-bottom: 100px;
+}
+
+.work {
+  margin: 80px;
+}
+
+.projects {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-top: 100px;
+}
+
+.project-1, .project-2, .project-3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 1;
+}
+
+.project-1-img {
+  height: 90%;
+  width: 90%;
+  border-radius: 6%;
   margin: 0;
   padding: 0;
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  line-height: 1.5;
+  min-width: 300px;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+.project-2-img, .project-3-img {
+  height: 70%;
+  width: 70%;
+  border-radius: 6%;
   margin: 0;
+  padding: 0;
+  min-width: 200px;
+}
+
+.project-1-img:hover, .project-2-img:hover, .project-3-img:hover {
+  transform: scale(1.2);
 }
 
 p {
   margin: 0;
+  padding: 0;
+  text-align: center;
+  font-size: 1.5rem;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+h1 {
+  font-size: 6.5rem
+}
+
+h2 {
+  font-size: 4rem;
+}
+
+h3 {
+  text-align: center;
+  font-size: 3rem;
+  width: 100%;
+}
+
+h4 {
+  padding-top: 3px;
+  font-size: 2rem;
+  line-height: 0;
+}
+
+.resume {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+footer {
+  margin-top: 200px;
+  font-size: 0.5rem;
+}
+
+@media (max-width:980px) {
+  h1 {
+      font-size: 3.5rem
+  }
+  h2 {
+      font-size: 2rem
+  }
+  h3 {
+      font-size: 1.5rem
+  }
+  h4 {
+      font-size: 1rem
+  }
+  p {
+      font-size: 1em;
+  }
+
+  .projects {
+      display: block;
+  }
+
+  .project-1-img, .project-2-img, .project-3-img {
+      height: auto;
+      width: 100px;
+  }
+
+  .about-me img {
+      position: relative;
+      left: 28%;
+      width: 50%;
+  }
+}
+
+@media (max-width:600px) {
+  h1 {
+      font-size: 2.5rem
+  }
+  h2 {
+      font-size: 1.8rem
+  }
+  h3 {
+      font-size: 1.5rem
+  }
+  h4 {
+      font-size: 1rem
+  }
+  p {
+      font-size: 1em;
+  }
+
+  nav {
+      width: 60%;
+      font-size: 1rem;
+  }
+
+  .container-nav {
+      gap: 20px
+  }
+
+  .projects {
+      display: block;
+  }
+
+  .project-1-img, .project-2-img, .project-3-img {
+      height: auto;
+      width: 100px;
+  }
+
+  .about-me, .contact-me, .resume {
+      margin: 0;
+      margin-top: 20px;
+      margin-bottom: 30px;
+      padding: 0;
+      padding-bottom: 20px;
+      font-size: 10pt;
+  }
+
+
+  .about-me img {
+      position: relative;
+      width: 50%
+  }
+
+  embed {
+      width: 70%;
+      height: auto;
+  }
 }
